# todo-rs

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs
