[package]
name = "todo"
authors = [ "Mahesh Bansod<mahesh0bansod@gmail.com>" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
dirs = "5.0.1"
getset = "0.1.2"
owo-colors = "4.2.0"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
